<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LetsGoTravel</string>
    <string name="header_title">Let\'s go Travel</string>
    <string name="sort_text">Sort</string>
    <string name="filter_text">Filter</string>
    <string name="map_text">Map</string>
    <string name="next">Next</string>
    <string name="go_to_next_screen">Go no next Screen</string>
    <string name="hi_main_screen">Hi!!!</string>
    <string name="reg_log_main_screen">Please LogIn or Register now</string>

    <string name="test_text_of_screen" translatable="false"><![CDATA[
        «Девочке три, она едет у папы на шее…» \n
\n
Девочке три, она едет у папы на шее. \n
Сверху всё видно совсем по-другому, чем снизу. \n
Папа не верит, что скоро она повзрослеет. \n
Папа готов воплощать в жизнь любые капризы… \n
\n
Девочке шесть, на коленках у папы удобно. \n
Он подарил ей щенка и большую конфету. \n
Папа колючий, как ёж, и как мишка, огромный. \n
Папа умеет и знает вообще всё на свете… \n
\n
Девочке десять, и ей захотелось помаду. \n
Спёрла у мамы, накрасила розовым губы. \n
Папа ругался, кричал, что так делать не надо. \n
Папа умеет бывать и сердитым, и грубым… \n
\n
Девочке скоро пятнадцать, она повзрослела. \n
В сумочке пачка «эссе» в потаённом кармане. \n
Папа вчера предложил покататься на шее. \n
Девочка фыркнула: «Ты же не выдержишь, старый»... \n
\n
Девочка курит в окно и отрезала чёлку. \n
Девочка хочет тату и в Египет с подружкой. \n
Папа зачем-то достал новогоднюю ёлку. \n
Девочке это давно совершенно не нужно... \n
\n
Девочке двадцать, она ночевала не дома. \n
Папа звонил раз пятьсот или может быть больше. \n
Девочка не подходила всю ночь к телефону. \n
Папа не спал ни минуты сегодняшней ночью... \n
\n
Утром приехала, папа кричал и ругался. \n
Девочка злилась в ответ и кидалась вещами. \n
Девочка взрослая, так говорит её паспорт. \n
Девочка может бывать, где захочет, ночами... \n
\n
Девочка замужем, видится с папой нечасто. \n
Папа седой, подарил ей большую конфету. \n
Папа сегодня немножечко плакал от счастья: \n
Дочка сказала, что он превращается в деда... \n
\n
Девочке тридцать, ей хочется к папе на шею. \n
Хочется ёлку, конфету и розовый бантик. \n
Девочка видит, как мама и папа стареют. \n
В книжке хранит от конфеты разглаженный фантик... \n
\n
Девочка очень устала и плачет ночами. \n
Папа звонит каждый день, беспокоясь о внучке. \n
Девочка хочет хоть на день вернуться в начало, \n
Девочка хочет домой, хочет к папе на ручки... \n
\n
Девочка-женщина с красной помадой и лаком. \n
Девочка любит коньяк и смотреть мелодрамы. \n
Папа звонил, и по-старчески жалобно плакал. \n
В ночь увезли на карете в больницу их маму. \n
\n
Мама поправилась, девочка ходит по кухне. \n
Пахнет лекарствами и чем-то приторно сладким. \n
Девочка знает, что всё обязательно рухнет. \n
Девочке хочется взять, и сбежать без оглядки \n
В мир, где умеют назад поворачивать время. \n
Где исполняются влёт все мечты и капризы. \n
Где она едет, как в детстве, у папы на шее, \n
И ей всё видно совсем по-другому, чем снизу... \n
\n
Мальвина Матрасова
\n
    ]]></string>

</resources>